--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-hacker
+title: Christopher Shehu
+description: This will be the page to see the projects I'm currently working on. I also plan to have a blog to talk about related content. 
